Рабочий код с отладочными выводами и без нормальной обработки ошибок